--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <main>
             <div class="playfield d-flex justify-content-center">
-                <div class="grid my-5">
+                <!-- <div class="grid my-5">
                     <div class="square">
                         <span>1</span>
                     </div>
@@ -56,7 +56,7 @@
                     <div class="square">
                         <span>11</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </main>
 
