Aggiunto bonus livelli di difficoltà

--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
         <header class="mx-5 d-flex justify-content-between align-items-center">
             <!-- logo -->
             <h1>Campo Minato</h1>
-            <!-- select -->
-            <button id="play-btn">Gioca!</button>
+
+            <div class="difficulty">
+                <span class="me-2">Scegli il tuo livello:</span>
+
+                <select class="me-5" name="level" id="level">
+                    <option value="1">Facile</option>
+                    <option value="2">Medio</option>
+                    <option value="3">Difficile</option>
+                </select>
+
+                <button id="play-btn">Gioca!</button>
+            </div>    
         </header>
 
         <main>
